# python-ndk

./: .coveragerc  .gitignore  LICENSE  README.md  codecov.yml  conftest.py  pylintrc  pyproject.toml  relay_requirements.txt  testing_utils.py  verify_format_lint.py
.github/workflows/: precommit.yaml
cli/: nostrcli.py
cli/read_cmd/: metadata.py
functional_tests/: conftest.py  test_metadata_repo.py  test_publish_event.py  test_publish_event_malformed.py  test_text_note_repo.py  test_websockets.py
ndk/: __init__.py  crypto.py  exceptions.py  serialize.py  test_crypto.py  test_serialize.py  test_types.py  types.py
ndk/event/: auth_event.py  close_message.py  command_result.py  contact_list_event.py  event.py  event_builder.py  event_filter.py  event_parser.py  event_tags.py  metadata_event.py  parameterized_replaceable_event.py  reaction_event.py  recommend_server_event.py  repost_event.py  request.py  stored_events.py  test_auth_event.py  test_command_result.py  test_event.py  test_event_builder.py  test_event_filter.py  test_event_tags.py  test_parameterized_replaceable_event.py  test_reaction_event.py  test_repost_event.py  test_text_note_event.py  test_zap_receipt.py  text_note_event.py  zap_receipt_event.py
ndk/messages/: auth.py  close.py  command_result.py  eose.py  event_message.py  message.py  message_factory.py  notice.py  relay_event.py  request.py  test_auth.py  test_close.py  test_command_result.py  test_eose.py  test_event_message.py  test_message_factory.py  test_notice.py  test_relay_event.py  test_request.py
ndk/relay/: auth_handler.py  event_handler.py  message_dispatcher.py  message_handler.py  relay_information_document.py  subscription_handler.py  test_auth_handler.py  test_event_handler.py  test_event_notifier.py  test_message_dispatcher.py  test_message_handler.py  test_relay_information_document.py  test_subscription_handler.py
ndk/relay/event_repo/: event_notifier.py  event_repo.py  kafka_event_persister.py  kafka_event_repo.py  kafka_events.py  kafka_mysql_event_persister.py  kafka_mysql_event_repo.py  memory_event_repo.py  mysql_event_repo.py  postgres_event_repo.py  test_event_notifier.py  test_event_repo.py  test_kafka_events.py
ndk/repos/: contacts.py
ndk/repos/event_repo/: event_repo.py  memory_event_repo.py  protocol_handler.py  relay_event_repo.py  test_protocol_handler.py
ndk/repos/metadata_repo/: event_backed_metadata_repo.py  fake_metadata_repo.py  metadata_repo.py
ndk/repos/text_note_repo/: event_backed_text_note_repo.py  fake_text_note_repo.py  text_note_repo.py
relay/: config.ini  config.py  event_handler.py  event_persister.py  message_dispatcher.py  message_handler.py  server.py  subscription_handler.py  test_config.py  test_event_handler.py  test_event_repo.py  test_message_dispatcher.py  test_message_handler.py  test_server.py  test_subscription_handler.py
relay/deploy/: .dockerignore  Tiltfile  event-persister.dockerfile  relay.dockerfile  relay.yaml
relay/deploy/base/: deployment.yaml  event-persister-deployment.yaml  ingress.yaml  kustomization.yaml  mysql.yaml  postgres.yaml  service.yaml
relay/deploy/overlays/dev/: db.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  patch-deployment.yaml  patch-event-persister.yaml  patch-ingress.yaml  postgres.yaml  postgresql.yaml  secrets.yaml  self-signed-cluster-issuer.yaml
relay/deploy/overlays/dev/kafka/: Chart.yaml
relay/deploy/overlays/dev/traefik/: Chart.yaml
relay/deploy/overlays/prod/: deployment.yaml  kustomization.yaml  service.yaml
relay/deploy/overlays/staging/: kustomization.yaml  service.yaml  staging-issuer.yaml
relay/event_repo/: event_notifier.py  event_repo.py  memory_event_repo.py  mysql_event_repo.py  postgres_event_repo.py  test_event_notifier.py  test_event_repo.py  test_memory_event_repo.py
scripts/: nostrcli_sanity_check.py  verify_format_lint.py
server/: event_repo.py  message_dispatcher.py  message_handler.py  server.py  test_event_repo.py  test_message_dispatcher.py  test_message_handler.py  test_server.py
spec_tests/: test_nip_01_req_filters.py  test_nip_11_relay_information_document.py  test_nip_16_events.py  test_nip_18_repost_events.py  test_nip_25_reaction_events.py  test_nip_33_parameterized_replaceable_events.py  test_nip_42_auth.py  test_publish_event.py  test_publish_event_malformed.py  test_websockets.py  utils.py
