[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-ndk"
version = "0.1.0"
description = "Python Nostr Development Kit"
authors = ["Julian Knutsen <julianknutsen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/julianknutsen/python-ndk.git"
keywords = ["python-ndk", "nostr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
packages = [
    { include = "ndk" }
]
exclude = ["test_*.py"]

[tool.poetry.dependencies]
# prod
python = ">=3.9"
coincurve = "18.0.0"

# extras / dev
black = { version = "*", optional = true }
click = { version = "*", optional = true }
coverage = { version = "*", optional = true }
isort = { version = "*", optional = true }
mock = { version = "*", optional = true }
mypy = { version = "*", optional = true }
pipreqs = { version = "*", optional = true }
pylint = { version = "*", optional = true }
pytest = { version = "*", optional = true }
types-mock = { version = "*", optional = true }
websocket-client = { version = "*", optional = true }

[tool.poetry.scripts]
nostrcli = "cli.nostrcli:main"
test = "pytest:main"
lint = "scripts.verify_format_lint:main"

[tool.poetry.extras]
cli = ["click", "websocket-client"]
dev = ["black", "coverage", "isort", "mock", "mypy", "pipreqs", "pylint", "pytest", "types-mock", "websocket-client"]
test = ["mock", "pytest", "types-mock", "websocket-client"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli_level = "INFO"
addopts = "--strict-config --strict-markers"

[tool.mypy]
exclude = "conftest.*"

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coincurve.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websocket.*"
ignore_missing_imports = true